--- a/Style/style.css
+++ b/Style/style.css
@@ -15,6 +15,7 @@ img{
 }
 p {
     font-size: 1em;
+    text-align: center;
 }
 
 .nav {
@@ -85,7 +86,6 @@ p {
 	width:100%;
 	display: flex;
   margin:3em 0;
-	flex-flow: row wrap;
 }
 
 .left{
